actulizacion lombok